--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
                 font-family: 'Courier New', Courier, monospace;
             }
         </style>
-        <div class="carphead">
-            carp is pog
-        </div>
+        
     </head>
     <body>
         <div class="carpbody">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Cyprinus_carpio.jpeg" height="100%" width="100%">
+        <img src="https://preview.redd.it/plt2i73xyxe71.png?width=1680&format=png&auto=webp&s=2a4e56d26d000bd01d4c36e0d063ede8273ea35c" height="100%" width="100%">
         </div>
     </body>
 </html>
