--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class="carpbody">
-        <img src="https://preview.redd.it/plt2i73xyxe71.png?width=1680&format=png&auto=webp&s=2a4e56d26d000bd01d4c36e0d063ede8273ea35c" height="100%" width="100%">
+        <img src="http://www.khatnews.me/se.png" height="100%" width="100%">
         </div>
     </body>
 </html>
