--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src="khat.jpg" alt="khat" width="500" height="333">
+<img src="khat.jpg" alt="khat">
 
 </body>
 </html>
