--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <img src=“khat.jpg”>
+</head>
 <body>
-
-<img src="khat.jpg" alt="khat">
-
+    
 </body>
 </html>
